<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.DashboardActivity">
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/below_image"
            android:paddingTop="50dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/kavoon"
                android:text="@string/user_profile"
                android:textColor="@color/lightblue"
                android:textSize="40sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:orientation="vertical"
                    android:layout_marginTop="50dp"
                    >
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardUseCompatPadding="true"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="5dp"
                        app:cardBackgroundColor="@color/lightblue"

                        android:layout_marginHorizontal="10dp"
                        >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/allen_george"
                                android:textSize="30sp"
                                android:textColor="@android:color/white"
                                android:layout_marginVertical="10dp"
                                android:textStyle="bold"

                                />
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.5dp"
                                android:background="@android:color/darker_gray"
                                android:layout_marginHorizontal="45dp"
                                android:layout_marginVertical="5dp"
                                />
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:orientation="horizontal"
                                android:gravity="center"
                                android:layout_marginTop="10dp"
                                android:layout_height="wrap_content">
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:layout_marginEnd="20dp"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="796"
                                        android:textSize="24sp"
                                        style="bold"
                                        android:textAlignment="center"
                                        android:textColor="@android:color/white"
                                        />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Follower"
                                        android:textSize="20sp"
                                        android:textAlignment="center"
                                        android:textColor="@android:color/white"
                                        />


                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:layout_marginEnd="20dp"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="156"
                                        android:textSize="24sp"
                                        style="bold"
                                        android:textAlignment="center"
                                        android:textColor="@android:color/white"
                                        />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="Following"
                                        android:textSize="20sp"
                                        android:textAlignment="center"
                                        android:textColor="@android:color/white"
                                        />



                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:orientation="vertical"
                                    android:gravity="center"
                                    android:layout_height="wrap_content">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="288"
                                        android:textSize="24sp"
                                        style="bold"
                                        android:textAlignment="center"
                                        android:textColor="@android:color/white"
                                        />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/likes"
                                        android:textSize="20sp"
                                        android:textAlignment="center"
                                        android:textColor="@android:color/white"
                                        />


                                </LinearLayout>

                            </LinearLayout>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/profile_ironman"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="1dp"
                    app:civ_circle_background_color="@android:color/white" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/background_circle_color"
                            android:src="@drawable/ic_home_black_24dp"
                            android:padding="10dp"
                            android:layout_marginTop="5dp"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/home"
                            android:textStyle="bold"
                            android:textColor="#000"
                            android:layout_marginVertical="10dp"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#ededed"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/check_your_home_activity"
                            android:textAlignment="center"
                            android:layout_marginTop="5dp"
                            android:padding="10dp"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/background_circle_color"
                            android:src="@drawable/ic_search_black_24dp"
                            android:padding="10dp"
                            android:layout_marginTop="5dp"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search"
                            android:textStyle="bold"
                            android:textColor="#000"
                            android:layout_marginVertical="10dp"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#ededed"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/check_your_search_activity"
                            android:textAlignment="center"

                            android:layout_marginTop="5dp"
                            android:padding="10dp"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>



            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="20dp"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/background_circle_color"
                            android:src="@drawable/ic_mode_edit_black_24dp"
                            android:padding="10dp"
                            android:layout_marginTop="5dp"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit"
                            android:textStyle="bold"
                            android:textColor="#000"
                            android:layout_marginVertical="10dp"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#ededed"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/check_your_edit_activity"
                            android:textAlignment="center"
                            android:layout_marginTop="5dp"
                            android:padding="10dp"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/background_circle_color"
                            android:src="@drawable/ic_settings_applications_black_24dp"
                            android:padding="10dp"
                            android:layout_marginTop="5dp"
                            android:contentDescription="@string/todo" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/setting"
                            android:textStyle="bold"
                            android:textColor="#000"
                            android:layout_marginVertical="10dp"
                            />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="#ededed"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/check_your_setting_activity"
                            android:textAlignment="center"
                            android:layout_marginTop="5dp"
                            android:padding="10dp"
                            />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>



            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/aark_white_logo"
                    android:contentDescription="@string/todo" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>