<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_primary"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="48dp"
                android:text="SignUp"
                android:textSize="50sp"
                android:textColor="@android:color/white"
                android:paddingLeft="24dp"
                android:fontFamily="@font/kaushanscript_regular"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:clickable="false"
                android:clipToPadding="true"
                android:elevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextField"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/snp_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextField1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/snp_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextField2"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:endIconMode="password_toggle"
                        android:hint="@string/password_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/snp_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/outlinedTextField3"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:endIconMode="password_toggle"
                        android:hint="@string/password_again">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/snp_password_again"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                style="@style/Widget.MaterialComponents.Button"
                android:id="@+id/snp_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="SignUp"
                android:textSize="24dp"
                android:textAllCaps="false"
                android:layout_marginTop="45dp"
                />


            <Button
                android:id="@+id/snp_login"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-light"
                android:paddingVertical="7dp"
                android:text="@string/loginText"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:textSize="24dp"
                android:onClick="loginBack_from_SignUp"
                app:strokeColor="@color/colorPrimary"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/aark_black"
                android:layout_gravity="center"
                 />

        </LinearLayout>
    </ScrollView>
</LinearLayout>