<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_primary"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="48dp"
                android:text="Login"
                android:textSize="50sp"
                android:textColor="@android:color/white"
                android:paddingLeft="24dp"
                android:fontFamily="@font/kaushanscript_regular"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:clickable="false"
                android:clipToPadding="true"
                android:elevation="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="false">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:hint="@string/email_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_Email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:endIconMode="password_toggle"
                        android:hint="@string/password_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/forget_name"
                        android:letterSpacing="0.2"
                        android:layout_gravity="right"
                        android:onClick="forget_password"
                        android:textColor="@color/colorPrimaryDark"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                style="@style/Widget.MaterialComponents.Button"
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="7dp"
                android:text="Login"
                android:textSize="24dp"
                android:textAllCaps="false"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="80dp"
                android:fontFamily="sans-serif-light"
                />


            <Button
                android:id="@+id/sign_up"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-light"
                android:paddingVertical="7dp"
                android:onClick="signUp"
                android:text="SignUp"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="24dp"
                app:strokeColor="@color/colorPrimaryDark" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/aark_black"
                android:scaleType="fitXY"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                />
        </LinearLayout>

    </ScrollView>

</LinearLayout>